# lottery-dapp

./: Cargo.toml  README.md
frontend/: package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
meta/: Cargo.toml
output/: lottery.abi.json  lottery.imports.json  lottery.mxsc.json
scenarios/: lottery.scen.json
src/: lottery.rs
tests/: lottery_scenario_go_test.rs  lottery_scenario_rs_test.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
