[package]
name = "lottery"
version = "0.0.0"
edition = "2024"
publish = false
authors = ["you"]

[lib]
path = "src/lottery.rs"

[dependencies.multiversx-sc]
version = "0.66.0"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.66.0"

[workspace]
members = [
    ".",
    "meta",
]
